<resources>
    <string name="app_name">Turist Droid</string>
    <string name="twitter_api_key" translatable="false">2gb60EtVWSNnoadmlvFl4IeJI</string>
    <string name="twitter_api_secret" translatable="false">lWxd4SP7MOx1998rJ6oCM521HvMzW4P4aKR7VL9aomdnfOyTap</string>

    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>

    <string name="login">Login</string>
    <string name="singin">Sing in</string>
    <string name="no_count">Don\'t have an account?</string>
    <string name="createAccount">Create Account</string>
    <string name="logout">Logout</string>
    <string name="or_log">or</string>

    <string name="want_to_logout">Do you want to Logout?</string>

    <string name="my_sites">My Sites</string>
    <string name="it_site">Site</string>
    <string name="next_to_me">Next To Me</string>
    <string name="my_profile">My Profile</string>
    <string name="exit">Exit</string>

    <string name="menu_import">Import</string>
    <string name="menu_export">Export Sites</string>
    <string name="menu_light">Light</string>

    <string name="filter">Filter</string>
    <string-array name="Filters">
        <item>Filter...</item>
        <item>All Sites</item>
        <item>My Sites</item>
        <item>City</item>
        <item>Park</item>
        <item>Bar</item>
        <item>Monument</item>
        <item>Restaurant</item>
        <item>Shop</item>
    </string-array>

    <string name="order">Order</string>
    <string-array name="Orders">
        <item>Order...</item>
        <item>Order by name</item>
        <item>Order by date</item>
        <item>Order by ratings</item>
    </string-array>

    <string name="order_by_name">Order by name</string>
    <string name="order_by_date">Order by date</string>
    <string name="order_by_ratings">Order by ratings</string>

    <string name="site">Site:</string>
    <string name="date">Date:</string>
    <string name="ratings">Ratings:</string>

    <string name="update">Update</string>
    <string name="share">Share</string>
    <string name="add">Add</string>
    <string name="add_location">Add Location</string>
    <string name="or_import_qr">Or Import QR</string>

    <string name="site_name">Site Name</string>
    <string name="site_site">Site</string>
    <string name="site_date">Date</string>
    <string-array name="sites_types">
        <item>Site...</item>
        <item>City</item>
        <item>Park</item>
        <item>Bar</item>
        <item>Monument</item>
        <item>Restaurant</item>
        <item>Shop</item>
    </string-array>

    <string name="name_incorrecto">"The name isn\'t in the correct format"</string>
    <string name="email_incorrecto">"The email isn\'t in the correct format"</string>
    <string name="pwd_incorrecto">The password must be at least 6 characters</string>
    <string name="user_old">This operation is sensitive and requires recent auth. Log in again before retrying this requests.</string>

    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="isEmpty">The text is empty.</string>
    <string name="isAlreadyExist">The email is already exists</string>
    <string name="userNotCorrect">The email or password isn\'t correct</string>
    <string name="Gallery">Select from gallery</string>
    <string name="Photo">Take camera photo</string>
    <string name="SelectOption">Select option</string>

    <string name="error">Error</string>
    <string name="error_no_flash">The device does not have Flash</string>
    <string name="ok">OK</string>
    <string name="deleteCount">Delete count</string>
    <string name="error_permissions">Error: error with permissions</string>
    <string name="error_gallery">Error: error with Gallery</string>
    <string name="error_camera">Error: error with Camera</string>
    <string name="update_user">Updated user successfully</string>
    <string name="sure_delete">Are you sure you want to delete your account?</string>
    <string name="sure_update">Are you sure you want to update your account?</string>
    <string name="yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="caution">Caution</string>
    <string name="accept">Accept</string>

    <string name="site_added">Site Added</string>
    <string name="site_modified">Modified Site</string>
    <string name="site_deleted">Site Deleted</string>

    <string name="delete_site">Delete Site</string>
    <string name="delete_question">Do you want to delete this Site?</string>
    <string name="messExport">Do you want to export the files? The last file will be overwritten</string>
    <string name="messImport">Do you want to import the files? The last file will be overwritten</string>
    <string name="userDelete">User deleted successfully</string>
    <string name="importok">Import successfully</string>
    <string name="exportok">Export successfully</string>
    <string name="errorImport">Error: file not found</string>
    <string name="needPosition">Error : error your position is necessary</string>
    <string name="needFields">Error : all fields must be filled</string>
    <string name="selectSite">Error: Select one site</string>
    <string name="no_site_filter">No site with that filter</string>

    <string name="share_mysite">This is my Site</string>
    <string name="not_found">No nearby sites found</string>
    <string name="need_camera">You need camera permissions</string>
    <string name="need_gallery">You need gallery permissions</string>
    <string name="need_location">You need location permissions</string>
    <string name="service_error">Error with the service</string>
    <string name="no_net">Error you need an internet connection</string>
    <string name="error_post">Error with user insertion</string>
    <string name="error_put">Error with user update</string>
    <string name="limite_expired">Your time limit has expired</string>
    <string name="no_net_back_login">There is not internet connection, returning to login</string>
    <string name="no_permiss">Permission Denied</string>
    <string name="with_google">Sing in with google</string>

</resources>