<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".activities.ui.myprofile.MyProfileFragment"
                                                   android:background="@drawable/background_login">
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" android:id="@+id/frameLayout2" app:layout_constraintHorizontal_bias="1.0">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        >
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp" android:id="@+id/imgMyprofile"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_ricflor_user"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                        android:src="@drawable/builogo"
                        android:layout_width="80dp"
                        android:layout_height="80dp" android:id="@+id/imgMyProfileProvider"
                        android:scaleType="fitCenter"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" android:id="@+id/lblMyProfileProvider"
                        android:layout_weight="1" android:textAlignment="center" android:textAllCaps="true"
                        android:textColor="@color/ic_launcher_background" android:textSize="30sp"
                        android:textStyle="bold"/>
            </LinearLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtInLaMyprofileName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:startIconDrawable="@drawable/ic_person"
                    app:helperTextEnabled="true"
                    app:errorTextColor="#CD0000">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username" android:id="@+id/txtUserNameMyProfile"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtInLaMyprofileEmail"
                    app:layout_constraintTop_toBottomOf="@+id/txtInLaMyProfileEmail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:startIconDrawable="@drawable/ic_email"
                    app:helperTextEnabled="true"
                    app:errorTextColor="#CD0000">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" android:id="@+id/txtEmailMyProfile"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtInLaMyprofilePass"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:helperTextEnabled="true"
                    app:errorTextColor="#CD0000">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password" android:id="@+id/txtPassMyprofile"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            <Button
                    android:text="@string/update"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/btnUpdateMyprofile"
                    android:background="@drawable/buttom_round"
                    android:textColor="@color/white" android:layout_marginLeft="40dp"
                    android:layout_marginRight="40dp"/>
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"/>
            <Button
                    android:text="@string/deleteCount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:id="@+id/btnUnsubMyProfile"
                    android:background="@drawable/buttom_round_red" android:textColor="@color/white"
                    android:layout_marginLeft="40dp" android:layout_marginRight="40dp"/>
        </LinearLayout>
    </FrameLayout>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="225dp"
            android:layout_height="185dp"
            android:id="@+id/progressBarMyProfile"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>